syntax = "proto3";

package demo_grpc;

message Streaming {
    repeated int32 data_collection = 1 [packed=true];
}
